--- a/2022/AOCApp/AOCApp.csproj
+++ b/2022/AOCApp/AOCApp.csproj
@@ -23,6 +23,7 @@
 		<ProjectReference Include="..\Solutions\Day03\Day03.csproj" />
 		<ProjectReference Include="..\Solutions\Day04\Day04.csproj" />
 		<ProjectReference Include="..\Solutions\Day05\Day05.csproj" />
+		<ProjectReference Include="..\Solutions\Day06\Day06.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
