--- a/2022/AOCApp/AOCApp.csproj
+++ b/2022/AOCApp/AOCApp.csproj
@@ -25,6 +25,7 @@
 		<ProjectReference Include="..\Solutions\Day05\Day05.csproj" />
 		<ProjectReference Include="..\Solutions\Day06\Day06.csproj" />
 		<ProjectReference Include="..\Solutions\Day07\Day07.csproj" />
+		<ProjectReference Include="..\Solutions\Day08\Day08.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
