--- a/2022/AOCApp/AOCApp.csproj
+++ b/2022/AOCApp/AOCApp.csproj
@@ -27,6 +27,7 @@
 		<ProjectReference Include="..\Solutions\Day07\Day07.csproj" />
 		<ProjectReference Include="..\Solutions\Day08\Day08.csproj" />
 		<ProjectReference Include="..\Solutions\Day09\Day09.csproj" />
+		<ProjectReference Include="..\Solutions\Day10\Day10.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
