--- a/2022/AOCApp/AOCApp.csproj
+++ b/2022/AOCApp/AOCApp.csproj
@@ -30,6 +30,7 @@
 		<ProjectReference Include="..\Solutions\Day10\Day10.csproj" />
 		<ProjectReference Include="..\Solutions\Day11\Day11.csproj" />
 		<ProjectReference Include="..\Solutions\Day12\Day12.csproj" />
+		<ProjectReference Include="..\Solutions\Day13\Day13.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
