--- a/2022/AOCApp/AOCApp.csproj
+++ b/2022/AOCApp/AOCApp.csproj
@@ -31,6 +31,7 @@
 		<ProjectReference Include="..\Solutions\Day11\Day11.csproj" />
 		<ProjectReference Include="..\Solutions\Day12\Day12.csproj" />
 		<ProjectReference Include="..\Solutions\Day13\Day13.csproj" />
+		<ProjectReference Include="..\Solutions\Day14\Day14.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
