--- a/2022/AOCApp/Properties/launchSettings.json
+++ b/2022/AOCApp/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "AOCApp": {
       "commandName": "Project"
-      //"commandLineArgs": "--debug"
+      //,"commandLineArgs": "--debug"
     }
   }
 }
