--- a/2022/AOCApp/AOCApp.csproj
+++ b/2022/AOCApp/AOCApp.csproj
@@ -32,6 +32,7 @@
 		<ProjectReference Include="..\Solutions\Day12\Day12.csproj" />
 		<ProjectReference Include="..\Solutions\Day13\Day13.csproj" />
 		<ProjectReference Include="..\Solutions\Day14\Day14.csproj" />
+		<ProjectReference Include="..\Solutions\Day18\Day18.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
