--- a/2022/AOCApp/AOCApp.csproj
+++ b/2022/AOCApp/AOCApp.csproj
@@ -35,6 +35,7 @@
 		<ProjectReference Include="..\Solutions\Day18\Day18.csproj" />
 		<ProjectReference Include="..\Solutions\Day20\Day20.csproj" />
 		<ProjectReference Include="..\Solutions\Day21\Day21.csproj" />
+		<ProjectReference Include="..\Solutions\Day22\Day22.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
