--- a/2022/AOCApp/AOCApp.csproj
+++ b/2022/AOCApp/AOCApp.csproj
@@ -37,6 +37,7 @@
 		<ProjectReference Include="..\Solutions\Day20\Day20.csproj" />
 		<ProjectReference Include="..\Solutions\Day21\Day21.csproj" />
 		<ProjectReference Include="..\Solutions\Day22\Day22.csproj" />
+		<ProjectReference Include="..\Solutions\Day23\Day23.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
