Extract Day10 Hasher as a library

--- a/2017/Day10/Day10.csproj
+++ b/2017/Day10/Day10.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\KnotHash\KnotHash.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="input.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
