--- a/AocWebApp/App/App.csproj
+++ b/AocWebApp/App/App.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj" />
     <ProjectReference Include="..\Solvers\2023\Day00\Day00.csproj" />
+    <ProjectReference Include="..\Solvers\2023\Day01\Day01.csproj" />
   </ItemGroup>
 
 </Project>
