--- a/AocWebApp/App/App.csproj
+++ b/AocWebApp/App/App.csproj
@@ -16,6 +16,7 @@
     <ProjectReference Include="..\Solvers\2023\Day00\Day00.csproj" />
     <ProjectReference Include="..\Solvers\2023\Day01\Day01.csproj" />
     <ProjectReference Include="..\Solvers\2023\Day02\Day02.csproj" />
+    <ProjectReference Include="..\Solvers\2023\Day03\Day03.csproj" />
   </ItemGroup>
 
 </Project>
