--- a/AocWebApp/App/App.csproj
+++ b/AocWebApp/App/App.csproj
@@ -17,6 +17,7 @@
     <ProjectReference Include="..\Solvers\2023\Day01\Day01.csproj" />
     <ProjectReference Include="..\Solvers\2023\Day02\Day02.csproj" />
     <ProjectReference Include="..\Solvers\2023\Day03\Day03.csproj" />
+    <ProjectReference Include="..\Solvers\2023\Day04\Day04.csproj" />
   </ItemGroup>
 
 </Project>
