--- a/AocWebApp/App/App.csproj
+++ b/AocWebApp/App/App.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
     <PackageReference Include="Serilog.Sinks.TextWriter" Version="2.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
@@ -18,6 +19,7 @@
     <ProjectReference Include="..\Solvers\2023\Day02\Day02.csproj" />
     <ProjectReference Include="..\Solvers\2023\Day03\Day03.csproj" />
     <ProjectReference Include="..\Solvers\2023\Day04\Day04.csproj" />
+    <ProjectReference Include="..\Solvers\2023\Day05\Day05.csproj" />
   </ItemGroup>
 
 </Project>
