--- a/AocWebApp/App/App.csproj
+++ b/AocWebApp/App/App.csproj
@@ -21,6 +21,7 @@
     <ProjectReference Include="..\Solvers\2023\Day04\Day04.csproj" />
     <ProjectReference Include="..\Solvers\2023\Day05\Day05.csproj" />
     <ProjectReference Include="..\Solvers\2023\Day06\Day06.csproj" />
+    <ProjectReference Include="..\Solvers\2023\Day07\Day07.csproj" />
   </ItemGroup>
 
 </Project>
