--- a/AocWebApp/App/App.csproj
+++ b/AocWebApp/App/App.csproj
@@ -23,6 +23,7 @@
     <ProjectReference Include="..\Solvers\2023\Day06\Day06.csproj" />
     <ProjectReference Include="..\Solvers\2023\Day07\Day07.csproj" />
     <ProjectReference Include="..\Solvers\2023\Day08\Day08.csproj" />
+    <ProjectReference Include="..\Solvers\2023\Day09\Day09.csproj" />
   </ItemGroup>
 
 </Project>
