--- a/AocWebApp/App/App.csproj
+++ b/AocWebApp/App/App.csproj
@@ -24,6 +24,7 @@
     <ProjectReference Include="..\Solvers\2023\Day07\Day07.csproj" />
     <ProjectReference Include="..\Solvers\2023\Day08\Day08.csproj" />
     <ProjectReference Include="..\Solvers\2023\Day09\Day09.csproj" />
+    <ProjectReference Include="..\Solvers\2023\Day10\Day10.csproj" />
   </ItemGroup>
 
 </Project>
