--- a/AocWebApp/App/App.csproj
+++ b/AocWebApp/App/App.csproj
@@ -26,6 +26,7 @@
     <ProjectReference Include="..\Solvers\2023\Day09\Day09.csproj" />
     <ProjectReference Include="..\Solvers\2023\Day10\Day10.csproj" />
     <ProjectReference Include="..\Solvers\2023\Day11\Day11.csproj" />
+    <ProjectReference Include="..\Solvers\2023\Day12\Day12.csproj" />
   </ItemGroup>
 
 </Project>
