--- a/AocWebApp/App/App.csproj
+++ b/AocWebApp/App/App.csproj
@@ -30,6 +30,7 @@
     <ProjectReference Include="..\Solvers\2023\Day13\Day13.csproj" />
     <ProjectReference Include="..\Solvers\2023\Day14\Day14.csproj" />
     <ProjectReference Include="..\Solvers\2023\Day15\Day15.csproj" />
+    <ProjectReference Include="..\Solvers\2023\Day16\Day16.csproj" />
   </ItemGroup>
 
 </Project>
