--- a/AocWebApp/App/App.csproj
+++ b/AocWebApp/App/App.csproj
@@ -39,6 +39,7 @@
         <ProjectReference Include="..\Solvers\2024\Y24-Day06\Y24-Day06.csproj" />
         <ProjectReference Include="..\Solvers\2024\Y24-Day07\Y24-Day07.csproj" />
         <ProjectReference Include="..\Solvers\2024\Y24-Day08\Y24-Day08.csproj" />
+        <ProjectReference Include="..\Solvers\2024\Y24-Day09\Y24-Day09.csproj" />
     </ItemGroup>
 
 </Project>
