--- a/AocWebApp/App/App.csproj
+++ b/AocWebApp/App/App.csproj
@@ -41,6 +41,7 @@
         <ProjectReference Include="..\Solvers\2024\Y24-Day08\Y24-Day08.csproj"/>
         <ProjectReference Include="..\Solvers\2024\Y24-Day09\Y24-Day09.csproj"/>
         <ProjectReference Include="..\Solvers\2024\Y24-Day10\Y24-Day10.csproj"/>
+        <ProjectReference Include="..\Solvers\2024\Y24-Day11\Y24-Day11.csproj"/>
     </ItemGroup>
 
 </Project>
