--- a/AocWebApp/App/App.csproj
+++ b/AocWebApp/App/App.csproj
@@ -43,6 +43,7 @@
         <ProjectReference Include="..\Solvers\2024\Y24-Day10\Y24-Day10.csproj"/>
         <ProjectReference Include="..\Solvers\2024\Y24-Day11\Y24-Day11.csproj"/>
         <ProjectReference Include="..\Solvers\2024\Y24-Day12\Y24-Day12.csproj" />
+        <ProjectReference Include="..\Solvers\2024\Y24-Day13\Y24-Day13.csproj" />
     </ItemGroup>
 
 </Project>
